# my-rust-base-project

./: Cargo.toml  README.md  build.rs  build.zsh  buildOLD.rs
.cargo/: config.toml
.devcontainer/: devcontainer.json  dockerfile  installrust.sh  onCreateCommand.sh
src/: blink_task.rs  main.rs
