[package]
name = "embassy_blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "executor-thread", "integrated-timers", "task-arena-size-4096"] }
embassy-rp = { version = "0.2.0", features = ["critical-section-impl", "time-driver", "unstable-pac", "rp2040"] }
embassy-time = "0.3.2"
panic-halt = "1.0.0"

[profile.release]
lto = true
opt-level = "s"

[patch.crates-io]
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "015e3aecb410c2d5afefb908b4d4171d5b478be3" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "015e3aecb410c2d5afefb908b4d4171d5b478be3" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "015e3aecb410c2d5afefb908b4d4171d5b478be3" }